fix:Changed size of screen and gaps between elements in the sidebar.

--- a/components/exercise/ExerciseBoardSidebar/ExerciseBoardSidebar.module.css
+++ b/components/exercise/ExerciseBoardSidebar/ExerciseBoardSidebar.module.css
@@ -71,7 +71,7 @@
 }
 
 .sidebar--incorrect-components-title {
-    margin-top: 100px;
+    margin-top: 75px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -102,6 +102,7 @@
     align-items: center;
     justify-content: center;
     margin-top: 10px;
+    margin-bottom: 10px;
 }
 
 .sidebar--container {
